--- a/.editorconfig
+++ b/.editorconfig
@@ -12,6 +12,9 @@ max_line_length             = 120
 tab_width                   = 4
 trim_trailing_whitespace    = true
 
+[*.{kt,kts}]
+disabled_rules              = import-ordering
+
 [*.md]
 trim_trailing_whitespace    = false
 
