--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -22,21 +22,22 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 11
-        
+
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
-      
+
     - name: Build with Gradle
       run: ./gradlew build
-      
+
     - name: Build Documentation
       run: ./gradlew :site:browserProductionWebpack
-    
+
     - name: Deploy Documentation
       uses: JamesIves/github-pages-deploy-action@releases/v3
       with:
         ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
         BRANCH: master
         FOLDER: docs
+        TARGET_FOLDER: docs
         COMMIT_MESSAGE: Documentation Update
-      
+
