--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ kotlin.version=1.4.10
 ktlint-gradle.version=9.4.1
 ktlint.version=0.39.0
 
-# All
+# Lib
 kotlin-react.version=16.13.1-pre.124-kotlin-1.4.10
 kotlin-react-dom.version=16.13.1-pre.124-kotlin-1.4.10
 
