--- a/gradle.properties
+++ b/gradle.properties
@@ -2,6 +2,17 @@ version=1.0-SNAPSHOT
 
 kotlin.code.style=official
 
+org.gradle.parallel=true
+org.gradle.daemon=true
+org.gradle.caching=true
+org.gradle.vfs.watch=true
+# https://github.com/gradle/gradle/issues/4823
+org.gradle.configureondemand=false
+org.gradle.kotlin.dsl.caching.buildcache=true
+
+# https://kotlinlang.org/docs/reference/using-gradle.html#incremental-compilation
+kotlin.incremental=true
+
 # External dependencies
 kotlin.version=1.4.10
 
